[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plankapy"
version = "0.1.0"
authors = [
  { name="hwelch-fle" },
  { name="Private.coffee Team", email="support@private.coffee" },
]
description = "A python 3 based API for controlling a self-hosted Planka instance"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests"
]

[project.urls]
"Homepage" = "https://git.private.coffee/PrivateCoffee/plankapy"
"Bug Tracker" = "https://git.private.coffee/PrivateCoffee/plankapy/issues"
"Source Code" = "https://git.private.coffee/PrivateCoffee/plankapy"